--- a/main.html
+++ b/main.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Учебная страница для показа навыков верстки на чистом HTML/CSS">
+
     <link rel="stylesheet" href="./style.css">
+    <link rel="icon" href="./img/logo.png">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,regular,500,600,700,800,900,100italic,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Jura:300,regular,500,600,700" rel="stylesheet" />
     <link rel="stylesheet" href="./chiefSlider/chief-slider.css">
