Update and rename main.html to index.html

--- a/index.html
+++ b/index.html
@@ -613,6 +613,6 @@
     </div>
 
     <script defer src="./chiefSlider/chief-slider.js"></script>
-    <script src="./index.js"></script>
+    <script src="./main.js"></script>
 </body>
 </html>
